--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "phase-4-deploying-app-demo",
   "description": "Build scripts for Heroku",
   "engines": {
-    "node": ">= 14"
+    "node": "14.x"
+  },
+  "engines": {
+    "npm": "6.x"
   },
   "scripts": {
     "build": "npm install --prefix client && npm run build --prefix client",
